Prevent img to break the layout

--- a/src/modules/CRUD/components/Details/styles.scss
+++ b/src/modules/CRUD/components/Details/styles.scss
@@ -138,6 +138,10 @@
       padding: 0.3rem;
       border: 1px solid #ccc;
     }
+
+    img {
+      max-width: 100%;
+    }
   }
 
   &__list-value {
